@@ -27,8 +27,8 @@ public class SecurityConfig {
 
     private final String[] PUBLIC_ENDPOINTS = {
             "/auth/**",
-            "/blogs/**",
-            "/users/**",
+            //"/blogs/**",
+//            "/users/**",
             "/comments/**",
             "/ws/**",
             "/topic/notifications",
@@ -46,7 +46,7 @@ public class SecurityConfig {
             "/leaderboard/**",
             "/notification/**",
             "/search/**",
-            "/follow/**",
+//            "/follow/**",
             "/withdraw",
             "/chart/**"
     };
@@ -72,11 +72,11 @@ public class SecurityConfig {
                         .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
                         .anyRequest().authenticated()
                 )
-                .oauth2Login(oauth2 -> oauth2
-                        .defaultSuccessUrl("http://localhost:8080/auth/oauth2/success", true)
-                        .failureUrl("http://localhost:3000/login?error=true")
-                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
-                )
+//                .oauth2Login(oauth2 -> oauth2
+//                        .defaultSuccessUrl("http://localhost:8080/auth/oauth2/success", true)
+//                        .failureUrl("http://localhost:3000/login?error=true")
+//                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+//                )
                 .oauth2ResourceServer(oauth2 -> oauth2
                         .jwt(jwt -> jwt
                                 .decoder(customJwtDecoder)
@@ -102,7 +102,7 @@ public class SecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of(feUrl));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
         config.setAllowCredentials(true);
         config.setExposedHeaders(List.of("Set-Cookie"));
 
